fix: ensure tooltip z-index is less than navbar

--- a/src/views/preview/project-view.scss
+++ b/src/views/preview/project-view.scss
@@ -26,7 +26,7 @@
     background-color: $ui-blue;
     color: white;
     text-align: center;
-    z-index: 10;
+    z-index: 9;
 }
 
 .driver-popover.tooltip-set-thumbnail .driver-popover-title {
